finish fixed shift view

--- a/htcc-manager-tool/src/App.css
+++ b/htcc-manager-tool/src/App.css
@@ -147,7 +147,7 @@
 }
 
 .shift-employee-card {
-    padding: 10px;
+    padding: 8px;
 }
 
 .flex-row {
